# veneer

./: .gitignore  CLAUDE.md  Makefile.toml  README.md
.github/workflows/: ci.yml
skill/veneer/: SKILL.md
skill/veneer/references/: implement.md  laws.md  plan.md  ship.md  verify.md
spec/: basis.md  veneer.md
verifier/: Cargo.toml
verifier/src/: graph.rs  graph_lift.rs  intent.rs  kernel.rs  laws.rs  lib.rs  main.rs  mcp.rs  oxidize.rs  state.rs
verifier/tests/: cli.rs  cli_graph.rs  graph.rs  intent.rs  kernel.rs  laws.rs  laws_oxidation.rs  oxidize.rs  state.rs
