[package]
name = "veneer"
version = "0.1.0"
edition = "2021"
description = "Minimal CTT-grounded agentic harness verifier"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
toml = "0.8"

[dev-dependencies]
proptest = "1"
tempfile = "3"
